# kino-checker

./: .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  docker-compose.yml  env.env  requirements.txt  taskfile.yml  tree.txt
.github/workflows/: main.yml
bot/: Dockerfile  bot.py  requirements.txt
bot/bot_helpers/: answers.py  db_info_finder.py  db_model.py  info_finder.py
cleaner/: Dockerfile  cleaner.py
cleaner/cleaner_helpers/: db_model.py
cleaner/logger/: custom_logger.py
cleaner/tables/: tables_model.py
code/bot/: Dockerfile  pyproject.toml
code/bot/src/bot/: main.py
code/bot/src/bot/genai/: agent.py
code/bot/src/bot/utils/: answers.py  call_parser.py  db_info_finder.py  db_model.py  filters.py
code/bot/tests/: conftest.py
code/bot/tests/bot/: call_parser_test.py  db_info_finder_test.py  stages_test.py
code/bot/tests/bot/integeration_db/: docker_container.py  requirements.txt  utils.py
code/bot/utils/: states.py
code/cleaner/: Dockerfile  cleaner.py  pyproject.toml  requirements.txt
code/cleaner/cleaner_helpers/: db_model.py
code/cleaner/src/cleaner/: main.py
code/cleaner/src/cleaner/utils/: db_cleaner.py
code/cleaner/tests/: conftest.py
code/cleaner/tests/cleaner/: cleaner_test.py
code/cleaner/tests/cleaner/integeration_db/: .env
code/common/: pyproject.toml
code/common/src/common/: call_parser.py  helpers.py
code/common/src/common/db/: db_model.py  manager.py
code/common/tests/common/: call_parser_test.py  helpers_test.py
code/init-db/: init-db.sql  int-test.sql  pg_hba.conf  queries.sql  sample-data-cleaner.sql  sample-data.sql
code/miner/: Dockerfile  main.py  pyproject.toml
code/miner/src/miner/: main.py
code/miner/src/miner/utils/: film_db_manager.py  film_fetcher.py  film_notifier.py
code/miner/tests/: conftest.py
code/miner/tests/miner/: film_db_manager_test.py  film_notifier_test.py
code/miner/tests/miner/integeration_db/: db.py  docker_container.py  integration_db.py
code/my_logger/: README.md
images/: diagram.drawio
init-db/: init-db.sql  sample-data.sql
miner/: Dockerfile  miner.py  requirements.txt
miner/miner_helpers/: db_updater.py  film_checker.py  films_info_miner.py  status_updater.py  tlg_updater.py  updater.py
miner/tables/: tables_model.py
my_logger/: README.md  pyproject.toml
my_logger/example/: helper.py  main.py
my_logger/src/: my_logger.py
src/bot/: Dockerfile  bot.py  requirements.txt
src/cleaner/: cleaner.py
src/init-db/: init-db.sql  sample-data.sql
src/miner/: Dockerfile  miner.py  pyproject.toml  (+1 more)
tests/: bot_info_finder_test.py  call_parser_test.py  db_info_finder_test.py  db_updater_test.py  film_db_manager_test.py  info_finder_test.py  miner_db_updater_test.py  miner_test.py  miner_tlg_updater_test.py  stages_test.py
(+23 files in other folders)
