[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_logger"
authors = [
    {name = "Daniel Saad", email = "me@dsaad.com"},
]
description = "My Custom Logger"
requires-python = ">=3.9"
version = "0.0.1"
readme = "README.MD"
dependencies = [
    "opencensus==0.11.2",
    "opencensus-context==0.1.3",
    "opencensus-ext-azure==1.1.9"
]

[project.optional-dependencies]
testing = [
    "pytest==7.4.0",
    ]