[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.2.1"
description = ""
authors = [{name = "Daniel Saad", email = "me@dsaad.com"}]
dependencies = [
    "common",
    "aiohttp==3.8.4",
    "pyTelegramBotAPI==4.11.0",
    "SQLAlchemy==2.0.12",
    "opencensus==0.11.2",
    "opencensus-context==0.1.3",
    "opencensus-ext-azure==1.1.9",
    "psycopg2-binary==2.9.6",
    "asyncio==3.4.3",
    "openai",
    "langchain",
    "elevenlabs",
    "langchain_openai"
]

[project.optional-dependencies]
testing = [
    "pytest==7.4.0",
    "debugpy",
    ]
