[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.0.1"
description = ""
authors = [{name = "Daniel Saad", email = "me@dsaad.com"}]
dependencies = [
    "SQLAlchemy==2.0.12",
    "psycopg2-binary==2.9.6",
]

[project.optional-dependencies]
testing = [
    "pytest==7.4.0",
    "debugpy",
    ]
